# TourPrice

./: .env  .env.example  Makefile  docker-compose.yml  pegas_page_dump.html  railway.toml
backend/: .env  Dockerfile  Dockerfile.prod  alembic.ini  manual_test_kompas_normalize.py  manual_test_pegas.py  pyproject.toml  railway.toml  test_actions.py  test_dual.py  test_dual2.py  test_selfie.py  test_stateinc.py  test_states.py  test_towns.py  test_towns2.py  test_towns3.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  11269934679a_add_resort_to_normalized_tours.py  304aff457ed9_add_hotel_mapping_table.py  32e277c4d2d4_add_kompas_destination_town.py  39c17dd5556a_add_kompas_catalog_tables.py  3f849a87791b_add_pegas_departure_location_table.py  5a57856e7d03_add_city_and_country_mapping_tables.py  5d2aafdbb3cf_add_kazunion_catalog_tables.py  68edbbdd386a_add_auto_matched_to_hotel_mapping.py  730b17973693_add_tour_program_mapping_table.py  81bc332da77e_add_selfie_catalog_v2.py  9418c67068a2_add_selfie_catalog.py  XXXX_add_pegas_catalog_tables.py  YYYY_add_operator_session_table.py  ZZZZ_add_samo_departure_city_table.py  af1a5c044ca5_add_funsun_catalog_tables.py  cb0c7646b45c_add_funsun_catalog_tables.py  f2da47b0af54_add_kazunion_catalog_tables.py
backend/app/: config.py  database.py  main.py  scheduler.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  retry.py
backend/app/models/: __init__.py  audit_log.py  comparison_result.py  funsun_catalog.py  kazunion_catalog.py  kompas_catalog.py  mappings.py  (+9 more)
(+67 files in other folders)
